--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.12.0",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -14,6 +15,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
+    "redux-nprogress": "^1.0.2",
     "redux-persist": "^5.10.0",
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-thunk": "^2.3.0",
