--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
