--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
+    "rc-calendar": "^9.15.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-mde": "^7.5.0",
